--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          
     </div>
 
-    <header>
+    <header></header>
         <div class="logo">
             <img src="https://c.ekstatic.net/ecl/logos/emirates/emirates-logo-badge.svg?h=d-52wmsnqryhi7L83BAKpg" alt="" width="4rem" height="4rem" style="color: black;">
         </div>
