--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          
     </div>
 
-    <header></header>
+    <header>
         <div class="logo">
             <img src="https://c.ekstatic.net/ecl/logos/emirates/emirates-logo-badge.svg?h=d-52wmsnqryhi7L83BAKpg" alt="" width="4rem" height="4rem" style="color: black;">
         </div>
@@ -158,9 +158,12 @@
         <section class="offers">
             <div class="overlay">
                 <div class="offer-txt">
-                    <p></p>
-                    <h4></h4>
-                    <p></p>
+                    <p class="special">SPECIAL OFFER FOR STUDENTS</p>
+                    <h4 class="offer-h">Students enjoy discounts and extras with us</h4>
+                    <p class="offer-p">Book your travels with Emirates to enjoy special discounts, extra baggage allowance and more</p>
+                </div>
+                <div class="btn">
+                    <a href="#">Learn More</a>
                 </div>
             </div>
         </section>
