--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
     </header>
-    <body>
+    <main>
         <section id="hero">
             <div class="back">
                 <div class="overlay">
@@ -167,7 +167,174 @@
                 </div>
             </div>
         </section>
+        <section class="flying-exper">
+            <p class="special2">FLYING WITH EMIRATES</p>
+            <h4 class="fly-h">Make it an incredible journey</h4>
+            <p class="fly-p">Explore the Emirates experience and plan an unforgettable trip beyond your flight.</p>
+            <div class="grids">
+                <div class="grid1">
+                    <p class="special3">DUBAI EXPERIENCE</p>
+                    <h5 class="grid-h">Create your Dubai Experience</h5>
+                </div>
+                <div class="grid2">
+                    <div class="grid">
+                        <p class="special4">CABIN FEATURES</p>
+                        <h5 class="grid-h0">First Class</h5>
+                    </div>
+                    <div class="grid">
+                        <p class="special4">CABIN FEATURES</p>
+                        <h5 class="grid-h0">Business Class</h5>
+                    </div>
+                    <div class="grid">
+                        <p class="special4">CABIN FEATURES</p>
+                        <h5 class="grid-h0">Premium Class</h5>
+                    </div>
+                    <div class="grid">
+                        <p class="special4">CABIN FEATURES</p>
+                        <h5 class="grid-h0">Economy Class</h5>
+                    </div>                    
+                </div>
 
-    </body>
+            </div>
+        </section>
+        <section class="about">
+            <h2>About us</h2>
+            <p>Learn more about our history, our business and sustainability initiatives</p>
+            <div class="slide">
+                <div class="slide-img">
+                    <img src="/images/airplane.avif" alt="">
+                    <a href="#">Our business</a>                    
+                </div>
+                <div class="slide-img">
+                    <img src="/images/mountain.avif" alt="">
+                    <a href="#">Our planet</a>                    
+                </div>
+                <div class="slide-img">
+                    <img src="/images/people.avif" alt="">
+                    <a href="#">Our people</a>                    
+                </div>
+                <div class="slide-img">
+                    <img src="/images/family-planting-tree.avif" alt="">
+                    <a href="#">Our commuities</a>                    
+                </div>
+
+            </div>
+        </section>
+        
+    </main>
+    <footer>
+
+    <div class="footer">
+        <div class="footer-container">
+            <div class="footer-section">
+                <h3>About us</h3>
+                <ul>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Media Centre</a></li>
+                    <li><a href="#">Our planet</a></li>
+                    <li><a href="#">Our people</a></li>
+                    <li><a href="#">Our communities</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Help</h3>
+                <ul>
+                    <li><a href="#">Help and Contact</a></li>
+                    <li><a href="#">Travel Updates</a></li>
+                    <li><a href="#">Special Assistance</a></li>
+                    <li><a href="#">Frequently asked questions</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Book</h3>
+                <ul>
+                    <li><a href="#">Book flights</a></li>
+                    <li><a href="#">Travel services</a></li>
+                    <li><a href="#">Transportation</a></li>
+                    <li><a href="#">Planning your trip</a></li>
+                    <li><a href="#">Search for flights</a></li>
+                    <li><a href="#">Dubai Experience</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Manage</h3>
+                <ul>
+                    <li><a href="#">Check-in</a></li>
+                    <li><a href="#">Manage your booking</a></li>
+                    <li><a href="#">Chauffeur drive</a></li>
+                    <li><a href="#">Flight status</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Before you fly</h3>
+                <ul>
+                    <li><a href="#">Baggage</a></li>
+                    <li><a href="#">Visa and passport information</a></li>
+                    <li><a href="#">Health</a></li>
+                    <li><a href="#">Travel information</a></li>
+                    <li><a href="#">Dubai International</a></li>
+                    <li><a href="#">To and from the airport</a></li>
+                    <li><a href="#">Rules and notices</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Where we fly</h3>
+                <ul>
+                    <li><a href="#">Route map</a></li>
+                    <li><a href="#">Africa</a></li>
+                    <li><a href="#">Asia and Pacific</a></li>
+                    <li><a href="#">Europe</a></li>
+                    <li><a href="#">The Americas</a></li>
+                    <li><a href="#">The Middle East</a></li>
+                    <li><a href="#">Flights to all countries/territories</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Experience</h3>
+                <ul>
+                    <li><a href="#">Cabin features</a></li>
+                    <li><a href="#">Shop Emirates</a></li>
+                    <li><a href="#">What's on your flight</a></li>
+                    <li><a href="#">Inflight entertainment</a></li>
+                    <li><a href="#">Dining</a></li>
+                    <li><a href="#">Our lounges</a></li>
+                    <li><a href="#">Dubai Stopover</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Loyalty</h3>
+                <ul>
+                    <li><a href="#">Log in to Emirates Skywards</a></li>
+                    <li><a href="#">Join Emirates Skywards</a></li>
+                    <li><a href="#">Our partners</a></li>
+                    <li><a href="#">Business Rewards benefits</a></li>
+                    <li><a href="#">Register your company</a></li>
+                    <li><a href="#">Emirates Skywards Programme Rules</a></li>
+                </ul>
+            </div>
+            <div class="footer-section subscribe">
+                <h3>Subscribe to our special offers</h3>
+                <input type="email" placeholder="Email address">
+                <input type="submit" value="Subscribe">
+                <p><a href="#">Unsubscribe or change your preferences</a></p>
+            </div>
+            <div class="footer-section apps">
+                <h3>Emirates App</h3>
+                <a href="#"><img src="appstore.png" alt="App Store"></a>
+                <a href="#"><img src="googleplay.png" alt="Google Play"></a>
+            </div>
+            <div class="footer-section social">
+                <h3>Connect with us</h3>
+                <a href="#"><img src="facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="linkedin.png" alt="LinkedIn"></a>
+                <a href="#"><img src="youtube.png" alt="YouTube"></a>
+                <a href="#"><img src="instagram.png" alt="Instagram"></a>
+            </div>
+        </div>
+    </div>
+
+    </footer>
 </body>
 </html>
