--- a/index.html
+++ b/index.html
@@ -315,17 +315,19 @@
             </div>
             <div class="footer-section subscribe">
                 <h3>Subscribe to our special offers</h3>
+                <p>Save with our latest fares and offers.</br><a href="#">Unsubscribe or change your preferences</a></p>
                 <input type="email" placeholder="Email address">
                 <input type="submit" value="Subscribe">
-                <p><a href="#">Unsubscribe or change your preferences</a></p>
             </div>
             <div class="footer-section apps">
                 <h3>Emirates App</h3>
+                <p>Book and manage your flights on the go.</p>
                 <a href="#"><img src="appstore.png" alt="App Store"></a>
                 <a href="#"><img src="googleplay.png" alt="Google Play"></a>
             </div>
             <div class="footer-section social">
                 <h3>Connect with us</h3>
+                <p>Share your Emirates experience.</p>
                 <a href="#"><img src="facebook.png" alt="Facebook"></a>
                 <a href="#"><img src="twitter.png" alt="Twitter"></a>
                 <a href="#"><img src="linkedin.png" alt="LinkedIn"></a>
