Update footer icons index.html

--- a/index.html
+++ b/index.html
@@ -328,11 +328,11 @@
             <div class="footer-section social">
                 <h3>Connect with us</h3>
                 <p>Share your Emirates experience.</p>
-                <a href="#"><img src="facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="linkedin.png" alt="LinkedIn"></a>
-                <a href="#"><img src="youtube.png" alt="YouTube"></a>
-                <a href="#"><img src="instagram.png" alt="Instagram"></a>
+                <a href="#"><<i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+                <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
             </div>
         </div>
     </div>
