manage page commit

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">BOOK</a></li>
+                <li><a href="./book.html">BOOK</a></li>
                 <li><a href="#">MANAGE</a></li>
                 <li><a href="#">EXPERIENCE</a></li>
                 <li><a href="#">WHERE WE FLY</a></li>
