--- a/manage.html
+++ b/manage.html
@@ -35,7 +35,7 @@
 
     </header>
     <main>
-        <section class="book-hero">
+        <section class="manage-hero">
             <div class="book-hero-text">
                 <p class="special">MANAGE</p>
                 <h1>Manage your booking</h1>
@@ -59,36 +59,29 @@
 
                     </div>
                 </div>
-                <div class="bookin-instructions">
+                <div class="manage-instructions">
                     <h4>Tailor your Emirates experience</h4>
-                    <p class="book-norm">There’s so much you can do with our booking management tool and you can take control of your journey in just a few clicks. It’s easy and secure ‑ just have your booking reference and your last name ready to get started.</p>
-                         <ol>
-                            <li>
-                                Manage your booking <br>
+                    <p class="manage-norm">There’s so much you can do with our booking management tool and you can take control of your journey in just a few clicks. It’s easy and secure ‑ just have your booking reference and your last name ready to get started.</p>
+                         <ol class="manage-list">
+                            <li><span class="manage-span">Manage your booking <br></span>
                                 You can edit and manage all your travel needs online. Book a dietary meal if you have a specific diet, upgrade your seat, and add a hotel or car rental to your booking. You can also book services like Chauffeur‑drive
                             </li>
-                            <li>
-                                Check your itinerary<br>
+                            <li><span class="manage-span">Check your itinerary<br></span>
                                 View, print or email your flight itinerary. Check your flight details and make changes to your booking
                             </li>
-                            <li>
-                                Select a seat<br>
+                            <li><span class="manage-span">Select a seat<br></span>
                                 Choose where you want to sit on the plane. Explore our immersive 3D seat map and get a feel for the experience before you select your seat. Choosing your seat on the flight also means your family or friends can sit together when you’re flying in a large group. Through Manage your booking you can change your seat at any time up until check‑in.
                             </li>
-                            <li>
-                                Update your email address and contact number
+                            <li><span class="manage-span">Update your email address and contact number</span>
                                 Keep your details up to date so we can send you notifications about your flights’ status, any disruptions, or if there’s a chance to upgrade.
                             </li>
-                            <li>
-                                Check‑in online
+                            <li><span class="manage-span">Check‑in online</span>
                                 Save time at the airport and check‑in online between 48 hours and 90 minutes before your flight. You can also use mobile check‑in and download your boarding pass on your phone. When you check‑in online, you can choose your seat for free.
                             </li>
-                            <li>
-                                Buy excess baggage allowance
+                            <li><span class="manage-span">Buy excess baggage allowance</span>
                                 See the weight limit for checked‑in baggage and carry‑on baggage, and if you need more you can pay for extra baggage online for 20% less than at the airport. Check our baggage rules before you fly
                             </li>
-                            <li>
-                                Log in to Emirates Skywards
+                            <li><span class="manage-span">Log in to Emirates Skywards</span>
                                 Manage every aspect of your loyalty account online. Add your membership number to your booking and earn Skywards Miles on your flight, or use your Miles to upgrade. Check your Miles balance and see when they’ll expire, and find out how many Tier Miles you need to reach the next membership level. Not a member? 
                             </li>
                          </ol>
