--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav>
             <ul>
                 <li><a href="./book.html">BOOK</a></li>
-                <li><a href="#">MANAGE</a></li>
+                <li><a href="./manage.html">MANAGE</a></li>
                 <li><a href="#">EXPERIENCE</a></li>
                 <li><a href="#">WHERE WE FLY</a></li>
                 <li><a href="#">LOYALTY</a></li>
