--- a/manage.html
+++ b/manage.html
@@ -42,15 +42,15 @@
                 <p>Enter your details to see your itinerary, make changes and add extra services.</p>
             </div>
             <div class="book-travel-form">
-                <div class="book-landing_form">
-                    <div class="book-form_body">
+                <div class="manage-landing_form">
+                    <div class="manage-form_body">
                         <div class="book-form-link">
                         <a href="#">Log in to view your trips</a>
                         </div>                    
                       <form class="book-mini_landing" action="#">
                       <div class="book-to">
-                        <input type="text" name="" placeholder="Passenger">
-                        <input type="text" name="" placeholder="Class">
+                        <input type="text" name="" placeholder="Lastname">
+                        <input type="text" name="" placeholder="Booking Reference">
                         <button class="book-book-hero-btn">
                             <a href="" target="new">Search flight</a>
                          </button>
