--- a/manage.html
+++ b/manage.html
@@ -44,14 +44,14 @@
             <div class="book-travel-form">
                 <div class="manage-landing_form">
                     <div class="manage-form_body">
-                        <div class="book-form-link">
+                        <div class="manage-link">
                         <a href="#">Log in to view your trips</a>
                         </div>                    
-                      <form class="book-mini_landing" action="#">
+                      <form class="manage-mini_landing" action="#">
                       <div class="book-to">
                         <input type="text" name="" placeholder="Lastname">
                         <input type="text" name="" placeholder="Booking Reference">
-                        <button class="book-book-hero-btn">
+                        <button class="manage-hero-btn">
                             <a href="" target="new">Search flight</a>
                          </button>
                       </div>
