--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav>
             <ul>
                 <li><a href="./book.html">BOOK</a></li>
-                <li><a href="./manage.html">MANAGE</a></li>
+                <li><a href="/manage.html">MANAGE</a></li>
                 <li><a href="#">EXPERIENCE</a></li>
                 <li><a href="#">WHERE WE FLY</a></li>
                 <li><a href="#">LOYALTY</a></li>
@@ -35,7 +35,7 @@
             <ul>
                 <li><i class="fa fa-globe" aria-hidden="true"></i><a href="#">NG</a></li>
                 <li><i class="fa fa-search" aria-hidden="true"></i></li>
-                <li><i class="fa fa-user-circle-o" aria-hidden="true"></i><a href="#">LOG IN</a></li>
+                <li><i class="fa fa-user-circle" aria-hidden="true"></i><a href="#">LOG IN</a></li>
             </ul>
         </div>
 
