--- a/manage.html
+++ b/manage.html
@@ -13,11 +13,12 @@
 <body>
     <header>
         <div class="logo">
-            <img src="https://c.ekstatic.net/ecl/logos/emirates/emirates-logo-badge.svg?h=d-52wmsnqryhi7L83BAKpg" alt="" width="4rem" height="4rem" style="color: black;">
+            <a href="/index.html">  <img src="https://c.ekstatic.net/ecl/logos/emirates/emirates-logo-badge.svg?h=d-52wmsnqryhi7L83BAKpg" alt="" width="4rem" height="4rem" style="color: black;">
+            </a>
         </div>
         <nav>
             <ul>
-                <li><a href="#">BOOK</a></li>
+                <li><a href="/book.html">BOOK</a></li>
                 <li><a href="#">MANAGE</a></li>
                 <li><a href="#">EXPERIENCE</a></li>
                 <li><a href="#">WHERE WE FLY</a></li>
